--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "d3": "3.4.11",
     "dcjs": "master",
     "jquery": "~1.10.2",
+    "nprogress": "~0.1.6",
     "underscore": "~1.5.2"
   },
   "private": true
