--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 bower_components
 node_modules
 src/js
+.gradle
+.idea
+build
+data/2013_trips.csv
+data/2014_trips.csv
+data/all_trips.csv
+data/Divvy_Trips_2013.csv
+data/Divvy_Trips_2014_Q1Q2.csv
+divvy-dashboard.iml
