--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "static-less-coffeescript-grunt-project",
-  "author": "Your Name <yourname@sample.com> (http://sample.com)",
-  "version": "0.0.0",
+  "name": "divvy-dashboard",
+  "author": "Cedric G Hurst II <cedric@spantree.net> (http://spantree.net)",
+  "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.10.0",
